Unexpected control assertion when enabling block-based unit testing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As part of work for SERVER-87165, I turned on block-based testing for unit tests in BSONColumnTest that use interleaved mode.

      The following tests fail with the assertion "Location8295706: Unexpected control"

      • InterleavedSkipAfterEmptySubObj
      • InterleavedSkipAfterEmptySubObjLegacyDecompression
      • InterleavedSkipAfterEmptySubArray
      • ZeroDeltaAfterInterleaved

            Assignee:
            Naama Bareket
            Reporter:
            Chris Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: