SERVER-87304: Account for Zero Deltas and Skips Post Interleaved Node (#20121)

GitOrigin-RevId: c973b7d862b8da7d420c27cf6f042aa49a62c53b